--- a/packages/presence/package.json
+++ b/packages/presence/package.json
@@ -35,7 +35,7 @@
   },
   "dependencies": {
     "@msgpack/msgpack": "^2.8.0",
-    "@yomo/webtransport-polyfill": "^1.0.10"
+    "@yomo/webtransport-polyfill": "link:@yomo/webtransport-polyfill"
   },
   "scripts": {
     "build": "bun build ./src/index.ts --outdir ./out --target browser --sourcemap=external",
