--- a/packages/group-hug-react/package.json
+++ b/packages/group-hug-react/package.json
@@ -11,7 +11,7 @@
     "avatar"
   ],
   "license": "MIT",
-  "module": "./dist/index.esm.js",
+  "module": "./dist/index.js",
   "types": "./types.d.ts",
   "files": [
     "dist",
@@ -31,23 +31,26 @@
   },
   "homepage": "https://github.com/yomorun/presencejs/tree/main/packages/group-hug-react#readme",
   "scripts": {
-    "build:css": "bunx tailwindcss -i ./style.css -o ./out/style.css",
+    "build:css": "tailwindcss -i ./style.css -o ./out/style.css",
     "build:js": "bun build ./index.tsx --outdir ./out --target browser --sourcemap=external",
-    "build:docs": "npm run build:css && vite build",
-    "build": "run-p build:js build:css",
-    "watch:css": "bunx tailwindcss -i ./style.css -o ./dist/style.css --watch",
+    "build": "bun run build:js && bun run build:css",
+    "watch:css": "tailwindcss -i ./style.css -o ./dist/style.css --watch",
     "watch:js": "bun build ./index.tsx --outdir ./out --target browser --sourcemap=external --watch",
     "start:vite": "",
     "start": "",
     "dist:js": "bun build ./index.tsx --outdir ./dist --target browser --sourcemap=external",
-    "dist:css": "bunx tailwindcss -i ./style.css -o ./dist/style.css --minify",
+    "dist:css": "tailwindcss -i ./style.css -o ./dist/style.css --minify",
     "dist": "rm -rf ./dist && bun run dist:js && bun run dist:css"
   },
   "devDependencies": {
-    "react": "^18.2.0"
+    "@types/react": "^18.2.22",
+    "bun-types": "^1.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@yomo/presence": "workspace:*",
+    "@yomo/presence": "workspace:../presence",
     "avvvatars-react": "^0.4.2"
   }
 }
