--- a/packages/group-hug-react/package.json
+++ b/packages/group-hug-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yomo/group-hug-react",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "description": "Live collaborator avatars for multiplayer web apps",
   "keywords": [
     "webtransport",
@@ -25,7 +25,10 @@
     "./package.json": "./package.json",
     "./style.css": "./dist/style.css"
   },
-  "repository": "github.com:yomorun/presencejs",
+  "repository": {
+    "type": "git",
+    "url": "github.com:yomorun/presencejs"
+  },
   "bugs": {
     "url": "https://github.com/yomorun/presencejs/issues?q=is%3Aissue+label%3Agrouphug+"
   },
