--- a/packages/group-hug-react/package.json
+++ b/packages/group-hug-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yomo/group-hug-react",
-  "version": "1.0.12",
+  "version": "1.0.14",
   "description": "Live collaborator avatars for multiplayer web apps",
   "keywords": [
     "webtransport",
@@ -11,16 +11,15 @@
     "avatar"
   ],
   "license": "MIT",
-  "module": "./dist/index.js",
-  "types": "./types.d.ts",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "files": [
-    "dist",
-    "./types.d.ts"
+    "dist"
   ],
   "exports": {
     ".": {
-      "types": "./types.d.ts",
-      "import": "./dist/index.js"
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs"
     },
     "./package.json": "./package.json",
     "./style.css": "./dist/style.css"
@@ -35,22 +34,25 @@
   "homepage": "https://github.com/yomorun/presencejs/tree/main/packages/group-hug-react#readme",
   "scripts": {
     "dev": "bun x vite -d",
+    "generate:types": "bun x tsc --jsx react",
     "build:css": "tailwindcss -i ./style.css -o ./out/style.css",
     "build:js": "bun build ./index.tsx --outdir ./out --target browser --sourcemap=external",
     "build": "bun run build:js && bun run build:css",
-    "dist:js": "bun build ./index.tsx --outdir ./dist --target browser --sourcemap=external",
+    "dist:js": "bun x vite build",
     "dist:css": "bun x tailwindcss -i ./style.css -o ./dist/style.css --minify",
-    "dist": "rm -rf ./dist && bun run dist:js && bun run dist:css"
+    "dist:types": "cp types.d.ts dist/index.d.ts",
+    "dist": "rm -rf ./dist && bun run dist:js && bun run dist:css && bun run dist:types"
   },
   "devDependencies": {
     "@types/react": "^18.2.22",
     "bun-types": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vite": "^4.4.9"
   },
   "dependencies": {
-    "@yomo/presence": "^2.2.17",
+    "@yomo/presence": "^2.2.18",
     "avvvatars-react": "^0.4.2"
   }
 }
