--- a/packages/live-cursor-react/package.json
+++ b/packages/live-cursor-react/package.json
@@ -15,6 +15,6 @@
     "react": "^18.2.0"
   },
   "peerDependencies": {
-    "@yomo/presence": "workspace:*"
+    "@yomo/presence": "workspace:../presence"
   }
 }
