--- a/packages/presence/package.json
+++ b/packages/presence/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yomo/presence",
-  "version": "2.2.17",
+  "version": "2.2.18",
   "description": "Edge Infra for Realtime Web Applications, geo-distributed architecture ⚡️",
   "license": "MIT",
   "keywords": [
@@ -35,7 +35,7 @@
   },
   "dependencies": {
     "@msgpack/msgpack": "^2.8.0",
-    "@yomo/webtransport-polyfill": "^1.0.16"
+    "@yomo/webtransport-polyfill": "^1.0.18"
   },
   "scripts": {
     "build": "bun build ./src/index.ts --outdir ./out --target browser --sourcemap=external",
@@ -43,6 +43,6 @@
     "test": "bun test",
     "cypress:open": "cypress open",
     "lint": "",
-    "dist": "bun build ./src/index.ts --outdir ./dist --target browser --sourcemap=external && cp src/types.d.ts dist/types.d.ts"
+    "dist": "rm -rf ./dist && bun build ./src/index.ts --outdir ./dist --target browser --sourcemap=external && cp src/types.d.ts dist/index.d.ts"
   }
 }
