--- a/prscd/env.example
+++ b/prscd/env.example
@@ -13,10 +13,10 @@ WITH_YOMO_ZIPPER=true
 
 # yomo
 YOMO_ZIPPER=127.0.0.1:9000
-YOMO_CREDENTIAL=
+# YOMO_CREDENTIAL=token:JiIIwgsDOgnGoVP
 YOMO_SNDR_NAME=prscd-sender
 YOMO_RCVR_NAME=prscd-receiver
-#YOMO_TRACE_JAEGER_ENDPOINT=http://localhost:14268/api/traces
+# OTEL_EXPORTER_OTLP_ENDPOINT=http://127.0.0.1:4318
 
 # Server TLS
 CERT_FILE=./lo.yomo.dev.cert
