--- a/packages/group-hug-react/package.json
+++ b/packages/group-hug-react/package.json
@@ -1,58 +1,59 @@
 {
-  "name": "@yomo/group-hug-react",
-  "version": "1.0.15",
-  "description": "Live collaborator avatars for multiplayer web apps",
-  "keywords": [
-    "webtransport",
-    "websocket",
-    "grouphug",
-    "realtime",
-    "live",
-    "avatar"
-  ],
-  "license": "MIT",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs"
+    "name": "@yomo/group-hug-react",
+    "version": "1.0.15",
+    "description": "Live collaborator avatars for multiplayer web apps",
+    "keywords": [
+        "webtransport",
+        "websocket",
+        "grouphug",
+        "realtime",
+        "live",
+        "avatar"
+    ],
+    "license": "MIT",
+    "type": "module",
+    "repository": {
+        "type": "git",
+        "url": "github.com:yomorun/presencejs"
     },
-    "./package.json": "./package.json",
-    "./style.css": "./dist/style.css"
-  },
-  "repository": {
-    "type": "git",
-    "url": "github.com:yomorun/presencejs"
-  },
-  "bugs": {
-    "url": "https://github.com/yomorun/presencejs/issues?q=is%3Aissue+label%3Agrouphug+"
-  },
-  "homepage": "https://github.com/yomorun/presencejs/tree/main/packages/group-hug-react#readme",
-  "scripts": {
-    "dev": "bun x vite -d",
-    "generate:types": "bun x tsc --jsx react",
-    "build:css": "tailwindcss -i ./style.css -o ./out/style.css",
-    "build:js": "bun build ./index.tsx --outdir ./out --target browser --sourcemap=external",
-    "build": "bun run build:js && bun run build:css",
-    "dist:js": "bun x vite build",
-    "dist:css": "bun x tailwindcss -i ./style.css -o ./dist/style.css --minify",
-    "dist:types": "cp types.d.ts dist/index.d.ts",
-    "dist": "rm -rf ./dist && bun run dist:js && bun run dist:css && bun run dist:types"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.22",
-    "bun-types": "^1.0.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^5.2.2",
-    "vite": "^4.4.9"
-  },
-  "dependencies": {
-    "@yomo/presence": "^2.2.18",
-    "avvvatars-react": "^0.4.2"
-  }
+    "bugs": {
+        "url": "https://github.com/yomorun/presencejs/issues?q=is%3Aissue+label%3Agrouphug+"
+    },
+    "homepage": "https://github.com/yomorun/presencejs/tree/main/packages/group-hug-react#readme",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@radix-ui/react-avatar": "^1.0.4",
+        "@yomo/presence": "^2.2.18",
+        "avvvatars-react": "^0.4.2",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.0.0",
+        "lucide-react": "^0.288.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "tailwind-merge": "^1.14.0",
+        "tailwindcss-animate": "^1.0.7"
+    },
+    "devDependencies": {
+        "@types/node": "^20.8.7",
+        "@types/react": "^18.2.15",
+        "@types/react-dom": "^18.2.7",
+        "@typescript-eslint/eslint-plugin": "^6.0.0",
+        "@typescript-eslint/parser": "^6.0.0",
+        "@vitejs/plugin-react-swc": "^3.3.2",
+        "autoprefixer": "^10.4.16",
+        "eslint": "^8.45.0",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.4.3",
+        "postcss": "^8.4.31",
+        "prettier": "^3.0.3",
+        "prettier-plugin-tailwindcss": "^0.5.6",
+        "tailwindcss": "^3.3.3",
+        "typescript": "^5.0.2",
+        "vite": "^4.4.5"
+    }
 }
