--- a/packages/group-hug-react/.prettierrc.json
+++ b/packages/group-hug-react/.prettierrc.json
@@ -1,8 +1,14 @@
 {
     "jsxSingleQuote": true,
-    "plugins": ["prettier-plugin-tailwindcss"],
-    "printWidth": 120,
     "singleQuote": true,
-    "tabWidth": 4,
-    "trailingComma": "es5"
+    "printWidth": 120,
+    "tabWidth": 2,
+    "useTabs": false,
+    "trailingComma": "all",
+    "proseWrap": "never",
+    "bracketSpacing": true,
+    "quoteProps": "preserve",
+    "endOfLine": "lf",
+    "htmlWhitespaceSensitivity": "ignore",
+    "plugins": ["prettier-plugin-tailwindcss"]
 }
