--- a/packages/group-hug-react/package.json
+++ b/packages/group-hug-react/package.json
@@ -1,59 +1,79 @@
 {
-    "name": "@yomo/group-hug-react",
-    "version": "1.0.15",
-    "description": "Live collaborator avatars for multiplayer web apps",
-    "keywords": [
-        "webtransport",
-        "websocket",
-        "grouphug",
-        "realtime",
-        "live",
-        "avatar"
-    ],
-    "license": "MIT",
-    "type": "module",
-    "repository": {
-        "type": "git",
-        "url": "github.com:yomorun/presencejs"
+  "name": "@yomo/group-hug-react",
+  "version": "1.0.15",
+  "description": "Live collaborator avatars for multiplayer web apps",
+  "keywords": [
+    "webtransport",
+    "websocket",
+    "grouphug",
+    "realtime",
+    "live",
+    "avatar"
+  ],
+  "license": "MIT",
+  "type": "module",
+  "main": "dist/cjs/index.js",
+  "module": "./dist/esm/index.js",
+  "types": "./dist/esm/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "exports": {
+    ".": {
+      "types": "./types.d.ts",
+      "import": "./dist/index.mjs"
     },
-    "bugs": {
-        "url": "https://github.com/yomorun/presencejs/issues?q=is%3Aissue+label%3Agrouphug+"
-    },
-    "homepage": "https://github.com/yomorun/presencejs/tree/main/packages/group-hug-react#readme",
-    "scripts": {
-        "dev": "vite",
-        "build": "tsc && vite build",
-        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-        "preview": "vite preview"
-    },
-    "dependencies": {
-        "@radix-ui/react-avatar": "^1.0.4",
-        "@yomo/presence": "workspace:*",
-        "avvvatars-react": "^0.4.2",
-        "class-variance-authority": "^0.7.0",
-        "clsx": "^2.0.0",
-        "lucide-react": "^0.288.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "tailwind-merge": "^1.14.0",
-        "tailwindcss-animate": "^1.0.7"
-    },
-    "devDependencies": {
-        "@types/node": "^20.8.7",
-        "@types/react": "^18.2.15",
-        "@types/react-dom": "^18.2.7",
-        "@typescript-eslint/eslint-plugin": "^6.0.0",
-        "@typescript-eslint/parser": "^6.0.0",
-        "@vitejs/plugin-react-swc": "^3.3.2",
-        "autoprefixer": "^10.4.16",
-        "eslint": "^8.45.0",
-        "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-react-refresh": "^0.4.3",
-        "postcss": "^8.4.31",
-        "prettier": "^3.0.3",
-        "prettier-plugin-tailwindcss": "^0.5.6",
-        "tailwindcss": "^3.3.3",
-        "typescript": "^5.0.2",
-        "vite": "^4.4.5"
-    }
+    "./package.json": "./package.json",
+    "./types.d.ts": "./types.d.ts"
+  },
+  "repository": {
+    "type": "git",
+    "url": "github.com:yomorun/presencejs"
+  },
+  "bugs": {
+    "url": "https://github.com/yomorun/presencejs/issues?q=is%3Aissue+label%3Agrouphug+"
+  },
+  "homepage": "https://github.com/yomorun/presencejs/tree/main/packages/group-hug-react#readme",
+  "scripts": {
+    "dev": "vite",
+    "build": "rm -rf dist/ && prettier src/ --write && npm run build:esm && npm run build:cjs",
+    "build:esm": "tsc",
+    "build:cjs": "tsc --module CommonJS --outDir dist/cjs",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@yomo/presence": "workspace:*",
+    "avvvatars-react": "^0.4.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.288.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7"
+  },
+  "devDependencies": {
+    "@types/node": "^20.8.7",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "@vitejs/plugin-react-swc": "^3.3.2",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss": "^8.4.31",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.6",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  }
 }
