--- a/packages/group-hug-react/package.json
+++ b/packages/group-hug-react/package.json
@@ -49,8 +49,7 @@
     "clsx": "^2.0.0",
     "lucide-react": "^0.288.0",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7",
-    "vite-plugin-dts": "^3.7.0"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20.8.7",
@@ -69,6 +68,7 @@
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
+    "vite-plugin-dts": "^3.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
